now start working on the spacing issue

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -3,18 +3,21 @@
   box-sizing: border-box;
 }
 h1 {
-  margin-bottom: 15px;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 p {
   border: 1px solid black;
   background-color: #A52A2A;
   width: 90%;
-  height: 150px;
+  height: 200px;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
   color: white;
+  /* padding: 5%; */
+  /* padding-top: 10%; */
 }
 
 /* Simple Responsive Framework. */
@@ -22,11 +25,18 @@ p {
   width: 100%;
 }
 
+.row > div{
+    /* background-color: #A52A2A; */
+    /* padding: 20px; */
+}
+
+
 /* display desktop version*/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
     border: 1px solid green;
+    
   }
   .col-lg-1 {
     width: 8.33%;
